kubernetes-config/02-mysql.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysqldb
  namespace: parking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysqldb
  template:
    metadata:
      labels:
        app: mysqldb
    spec:
      containers:
        - name: mysqldb
          image: mysql:8.0
          ports:
            - containerPort: 3306
          args:
            - "--default-authentication-plugin=mysql_native_password"
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: mysqldb
  namespace: parking
spec:
  selector:
    app: mysqldb
  ports:
    - port: 3306
      targetPort: 3306
  type: ClusterIP
