kubernetes-config/03-mqtt.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
  namespace: parking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      containers:
        - name: mosquitto
          image: eclipse-mosquitto:2
          ports:
            - containerPort: 1883
---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  namespace: parking
spec:
  selector:
    app: mosquitto
  ports:
    - port: 1883
      targetPort: 1883
