kubernetes-config/04-eureka.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-server
  namespace: parking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka-server
  template:
    metadata:
      labels:
        app: eureka-server
    spec:
      containers:
        - name: eureka-server
          image: parking-eureka-server:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8761
---
apiVersion: v1
kind: Service
metadata:
  name: eureka-server
  namespace: parking
spec:
  selector:
    app: eureka-server
  ports:
    - port: 8761
      targetPort: 8761
