kubernetes-config/05-vehicle-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vehicle-service
  namespace: parking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vehicle-service
  template:
    metadata:
      labels:
        app: vehicle-service
    spec:
      containers:
        - name: vehicle-service
          image: parking-vehicle-service:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: vehicle-service
  namespace: parking
spec:
  selector:
    app: vehicle-service
  ports:
    - port: 8082
      targetPort: 8082
