kubernetes-config/06-rate-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rate-service
  namespace: parking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rate-service
  template:
    metadata:
      labels:
        app: rate-service
    spec:
      containers:
        - name: rate-service
          image: parking-rate-service:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: rate-service
  namespace: parking
spec:
  selector:
    app: rate-service
  ports:
    - port: 8083
      targetPort: 8083
