kubernetes-config/07-ticket-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket-service
  namespace: parking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticket-service
  template:
    metadata:
      labels:
        app: ticket-service
    spec:
      containers:
        - name: ticket-service
          image: parking-ticket-service:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: ticket-service
  namespace: parking
spec:
  selector:
    app: ticket-service
  ports:
    - port: 8084
      targetPort: 8084
