kubernetes-config/08-security-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: security-service
  namespace: parking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: security-service
  template:
    metadata:
      labels:
        app: security-service
    spec:
      containers:
        - name: security-service
          image: parking-security-service:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: security-service
  namespace: parking
spec:
  selector:
    app: security-service
  ports:
    - port: 8081
      targetPort: 8081
